add Infrastructure migration and domain model fixes

--- a/AbsProject/Abs.Infrastructure/Abs.Infrastructure.csproj
+++ b/AbsProject/Abs.Infrastructure/Abs.Infrastructure.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\Abs.Application\Abs.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
