--- a/AbsProject/src/Abs.Api/appsettings.Development.json
+++ b/AbsProject/src/Abs.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Database" : "Host=abs-db; Post=5432; Database=bookify; Username=postgres; Password=postgres;"
+    "Database" : "Host=abs-db;Port=5432;Database=bookify;Username=postgres;Password=postgres;"
   },
   "Logging": {
     "LogLevel": {
